# rust-datastar-mp

./: .dockerignore  .gitignore  Dockerfile  PLAN.md  README.md  render.yaml
client/: .prettierrc.json  VAPOR_MODE_ENFORCEMENT.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/public/: index.html
client/src/: datastar-boot.ts  main.ts  scene.ts
client/src/game/: PlayerController.ts  SpriteAnimator.ts  TilemapBuilder.ts  babylon-renderer.ts  chat-gui.ts  datastar-init.ts  datastar-manager.ts  input.ts  player-state.ts  prediction.ts  renderer.ts
client/src/game/receivers/: chat-receiver.ts  player-receiver.ts
client/src/interfaces/: datastar.ts
server/: Cargo.toml
server/api/: Cargo.toml
server/api/src/: main.rs  routes.rs  state.rs
server/api/src/handlers/: chat.rs  config.rs  events.rs  game.rs  health.rs  mod.rs
server/game_core/: Cargo.toml  game_config.json
server/game_core/src/: chat.rs  commands.rs  config.rs  game_state.rs  ground_state.rs  lib.rs  physics.rs  player.rs  player_color.rs
