[package]
name = "api"
version.workspace = true
edition.workspace = true

[dependencies]
axum = "0.8"
tokio = { version = "1.48", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }
async-stream = "0.3"
futures = "0.3"
datastar = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.19", features = ["v4", "serde"] }
game_core = { path = "../game_core" }

